--- a/ShecodesBasics_FinalProject/ShecodesBasics_FinalProject/style.css
+++ b/ShecodesBasics_FinalProject/ShecodesBasics_FinalProject/style.css
@@ -1,5 +1,16 @@
-body::before {
+.container::before {
+  content: "";
   background-color: #606470;
+  background-image: url(https://s3-media0.fl.yelpcdn.com/bphoto/Lslvc4l238zlJQmIPt0g6Q/1000s.jpg);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 body {
@@ -7,38 +18,47 @@ body {
   margin-top: 60px;
   min-width: 700px;
   max-width: 1024px;
-  margin-left: 80px;
-  margin-right: 80px;
+  margin: 0 auto;
   border: 1px solid hsla(0, 0%, 0%, 0.2);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
-
+  margin-top: 60px;
   background-color: #606470;
-  height: 500px;
+  height: 550px;
 }
 
 h1 {
   display: block;
   margin: 0 auto;
   text-align: center;
-  font-size: 50px;
+  font-size: 55px;
   font-family: Helvetica, sans-serif;
   padding-top: 10px;
   padding-bottom: 5px;
   color: #ffff;
+  margin-top: 110px;
 }
 .best-service {
+  font-size: 1.17rem;
   display: block;
   margin: 0 auto;
   text-align: center;
+  background-color: blueviolet;
+  width: fit-content;
+  color: white;
+  border: 2px solid blueviolet;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
 }
 ul {
   list-style: none;
 }
 li {
-  display: inline-block;
+  padding-right: 20px;
+  display: flex;
   margin: 0 auto;
   text-align: center;
+  cursor: pointer;
 }
 
 .header {
@@ -46,15 +66,52 @@ li {
   align-items: center;
   background-color: #ffff;
   padding-left: 20px;
+  justify-content: space-evenly;
+  border-radius: 5px;
 }
 
 h3 {
   margin-right: 40px;
 }
 #info {
+  font-size: 1rem;
   margin-right: 10px;
 }
-#button {
+
+button {
+  border: none;
+  cursor: pointer;
+  text-align: center;
+}
+.categories {
   display: flex;
-  align-items: ;
+  align-items: center;
+  background-color: #ffff;
+  line-height: 50px;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 70px;
+  justify-content: space-evenly;
+}
+
+.element {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  margin-right: 10px;
+  padding: 10px 20px;
+  border-right: 1px solid black;
+  line-height: 1.7;
+  margin-top: 17px;
+  font-size: 1.12rem;
+  margin-bottom: 17px;
+}
+
+.sub {
+  font-size: 0.8rem;
+  font-weight: 100;
+  text-align: center;
+}
+html {
+  background-color: burlywood;
 }
