--- a/ShecodesBasics_FinalProject/ShecodesBasics_FinalProject/style.css
+++ b/ShecodesBasics_FinalProject/ShecodesBasics_FinalProject/style.css
@@ -1,30 +1,23 @@
-.container::before {
-  content: "";
-  background-color: #606470;
+body {
+  display: block;
+  margin-top: 60px;
+  min-width: 500px;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+body::before {
+  content: " ";
   background-image: url(https://s3-media0.fl.yelpcdn.com/bphoto/Lslvc4l238zlJQmIPt0g6Q/1000s.jpg);
   position: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
   z-index: -1;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-body {
-  display: block;
-  margin-top: 60px;
-  min-width: 700px;
-  max-width: 1024px;
-  margin: 0 auto;
-  border: 1px solid hsla(0, 0%, 0%, 0.2);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
-  margin-top: 60px;
-  background-color: #606470;
-  height: 550px;
 }
 
 h1 {
@@ -34,21 +27,24 @@ h1 {
   font-size: 55px;
   font-family: Helvetica, sans-serif;
   padding-top: 10px;
-  padding-bottom: 5px;
+  padding-bottom: 10px;
   color: #ffff;
   margin-top: 110px;
 }
 .best-service {
-  font-size: 1.17rem;
+  font-size: 1rem;
   display: block;
   margin: 0 auto;
   text-align: center;
-  background-color: blueviolet;
+  background-color: brown;
   width: fit-content;
   color: white;
-  border: 2px solid blueviolet;
+  border: 2px solid brown;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
+  padding: 7px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 ul {
   list-style: none;
@@ -66,8 +62,11 @@ li {
   align-items: center;
   background-color: #ffff;
   padding-left: 20px;
+  padding-right: 20px;
   justify-content: space-evenly;
   border-radius: 5px;
+  min-width: 500px;
+  max-width: 1024px;
 }
 
 h3 {
@@ -78,11 +77,6 @@ h3 {
   margin-right: 10px;
 }
 
-button {
-  border: none;
-  cursor: pointer;
-  text-align: center;
-}
 .categories {
   display: flex;
   align-items: center;
@@ -90,8 +84,13 @@ button {
   line-height: 50px;
   width: 80%;
   margin: 0 auto;
-  margin-top: 70px;
+  margin-top: 50px;
   justify-content: space-evenly;
+  min-width: 500px;
+  max-width: 1024px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 20px;
 }
 
 .element {
@@ -112,6 +111,35 @@ button {
   font-weight: 100;
   text-align: center;
 }
-html {
-  background-color: burlywood;
+input::placeholder {
+  text-indent: 10px;
+}
+
+.room-button,
+button {
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: brown;
+  border: 1px solid brown;
+  box-shadow: 0 o o 5px rgba(0, 0, 0, 0.2);
+  background: none;
+  padding: 0;
+  border: 0;
+  color: white;
+  cursor: pointer;
+}
+
+.room-button {
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: brown;
+  border: 1px solid brown;
+  box-shadow: 0 o o 5px rgba(0, 0, 0, 0.2);
+}
+.login,
+.sign-up {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 5px 10px;
+  color: black;
+  border-radius: 5px;
 }
